[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/the_branch/Editor/BranchEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/the_branch/Editor/BGraphEdit.gd" type="Script" id=2]
[ext_resource path="res://addons/the_branch/Editor/NewButton.gd" type="Script" id=3]

[node name="BranchEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoNodeMessage" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -418.5
margin_top = -9.0
margin_right = 418.5
margin_bottom = 9.0
bbcode_enabled = true
bbcode_text = "[center]Please select a [color=#AAAAFF]BranchController[/color] node in the [color=#AAAAFF]Scene Tab[/color] to view or edit its attached JSON file.[/center]"
text = "Please select a BranchController node in the Scene Tab to view or edit its attached JSON file."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddNewMessage" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="AddNewMessage"]
anchor_right = 1.0
margin_top = 221.0
margin_bottom = 247.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]The selected [color=#AAAAFF]BranchController[/color] node does not have an associated JSON file. Add an existing one in the [color=#AAAAFF]Inspector Tab[/color] or click the button to create a new one.[/center]"
text = "The selected BranchController node does not have an associated JSON file. Add an existing one in the Inspector Tab or click the button to create a new one."

[node name="CreateNewButton" type="Button" parent="AddNewMessage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -37.5
margin_right = 123.0
margin_bottom = 37.5
text = "Create new Branch JSON File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainView" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="MainView"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="MainView"]
anchor_right = 1.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerContainer" type="HBoxContainer" parent="MainView/Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 246.0
margin_right = -268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="MenuButton" parent="MainView/Buttons/InnerContainer"]
margin_right = 52.0
margin_bottom = 30.0
text = "Dialog"
flat = false
items = [ "Dialog", null, 0, false, false, 0, 0, null, "", false, "Dialog Choice", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AddNewMessage/CreateNewButton" to="." method="_on_CreateNewButton_pressed"]
[connection signal="change_made" from="MainView/GraphEdit" to="." method="_on_change_made"]
[connection signal="connection_request" from="MainView/GraphEdit" to="MainView/GraphEdit" method="_on_connection_request"]
[connection signal="disconnection_request" from="MainView/GraphEdit" to="MainView/GraphEdit" method="_on_disconnection_request"]
[connection signal="node_selected" from="MainView/GraphEdit" to="MainView/GraphEdit" method="_on_node_selected"]
[connection signal="node_unselected" from="MainView/GraphEdit" to="MainView/GraphEdit" method="_on_node_unselected"]
[connection signal="action" from="MainView/Buttons/InnerContainer/Dialog" to="MainView/GraphEdit" method="add_new_node"]
